[project]
name = "proxtest"
version = "0.1.0"
description = ""
authors = [
    {name = "HoJLter",email = "hojlter.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "proxtest", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
